css/index.css
* { margin: 0;   }

html{
    scroll-behavior: smooth;
}
a{
    color:white;
    text-decoration:none;
}
body{
    overflow-x: hidden;
    position: relative;
    max-width: 100%;
}
#rocket{
    width: 7%;
    position: absolute;
    top: 50%
}
.logo{
    position: absolute;
    width: 10%;
    z-index: 999;
}
#jslogo{
    position: absolute;
    left:50%;
    top: 4%;
}
#htmllogo{
    position: absolute;
    right: 0;
    top: 18%;
}
#csslogo{
    position: absolute;
    top: 18%;
}
#top_bar{
    position: relative;
    display: flex;
    justify-content: flex-end;
    width:100vw;
    height:5vw;
    background-color: black;
}
#main_top{

    width:100vw;
    height:200vh;
    background: #020024;
    background: linear-gradient(180deg,rgba(2, 0, 0, 1) 0%, rgba(9, 9, 121, 1) 80%, rgba(0, 192, 245, 1) 100%);
}
#top_bar_name{
    left: 3%;
    line-height: 1;
    padding-top: 1vw;
    position: relative;
    font-size: 1.8vw;
    align-self: center;
    padding-right: 25%;
    flex-shrink: 0;
}
.text{
    font-family: 'Inter', sans-serif;
    color:white;
    text-shadow: 0 1px 3px rgba(0, 0, 0, 0.7);
}

.box{
    width: 35%;
    display:flex;
    margin-left: 30%;
    line-height: 1;
    padding-top: 1vw;
    justify-content: flex-end;
    align-items: center;


}
.box_child{
    font-size: 1.8vw;
    text-align: center;
    width:auto;
    height:20%;
    display:flex;
    justify-content: center;
    align-self: center;
    margin:auto;
    padding: .25vw;
    flex-shrink: 0;
}
.stars{

    position: absolute;
    border-radius: 20%;
    width: 4px;
    height: 4px;
    background-color:white;
    transition: transform 1.5s ease;
}
.designer_div{
    border-radius: 5%;
    position: absolute;
    display: flex;
    gap: 1.5rem;
    flex-direction: column;
    width: 35%;
    height: 35%;
    background-color: #040455;
    box-shadow: -1px 1px 5px 9px rgba(255,255,255,0.70);
    z-index: 999;
}
#me_picture{
    width: 26%;
    position: absolute;
    top: 10%;
    right: 10%;
    display: flex;
}
#me_desc{
    width: 40vw;
    position: absolute;
    top: 10%;
    left: 10%;
    display: flex;
    word-wrap: break-word;
    gap: 1vw;
    flex-direction: column;
}
.img_fit{
    width: 100%;
    height: 100%;
    position: absolute;
    border-radius: 5%;
}
#header{
    font-size: 2.5vw;
    position: relative;

    left: 3%;
}
#under{
    font-size: 1vw;
    position:relative;

    left: 3%;
    text-shadow: 0 1px 3px rgba(0, 0, 0, 0.7);
}
#h_2{
    font-size: 1vw;
    position:relative;

    left: 3%;
    text-shadow: 0 1px 3px rgba(0, 0, 0, 0.7);
}
#main_text{
    font-size: .85vw;
    padding-right: 2px;
    position:relative;

    left: 3%;
    text-shadow: 0 5px 3px rgba(0, 0, 0, 0.7);

}
#main_text_lower{
    font-size: .85vw;
    position:relative;

    left: 3%;
    text-shadow: 0 5px 3px rgba(0, 0, 0, 0.7);
}
#skills{
    font-size: .75vw;
    padding-right: 2px;
    position: relative;

    font-weight: 600;
    text-shadow: 0 5px 3px rgba(0, 0, 0, 0.7);
    letter-spacing: 1px;
    line-height: 1.4;
}

@media (max-width: 500px){
    #me_picture{
        height: 20vh;
    }
    #me_desc{
        width: 40vw;
        height: 50vh;
        font-size: 150%;
    }
    #skills{
        gap: 1rem;
        font-size: 1.75vw;
        word-wrap: break-word;
    }
    #under{
        font-size: 1.75vw;
    }
    #h_2{
        font-size: 1.75vw;
    }
    #main_text{
        letter-spacing: 1px;
        font-size: 1.75vw;
        word-wrap: break-all;
    }
}
@media (min-width: 500px) and (max-width: 1025px){
    #me_picture{

        height: 35vh;
    }
    #me_desc{
        width: 45vw;
        height: 35vh;
    }
    #skills{
        font-size: 1.25vw;
        word-wrap: break-word;
    }
    #main_text{
        font-size: 1.25vw;
        word-wrap: break-all;
    }
}

